--- a/Kakuro/Site.Master
+++ b/Kakuro/Site.Master
@@ -39,7 +39,7 @@
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
+                <p>&copy; <%: DateTime.Now.Year %> - Kakuro</p>
             </footer>
         </div>
     </form>
