--- a/Kakuro/Views/Site.Master
+++ b/Kakuro/Views/Site.Master
@@ -25,11 +25,11 @@
                 </button>
                 <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/About">About</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Login">Login</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Register">Register</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Views/">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Views/About">About</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Views/Contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Views/Login">Login</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Views/Register">Register</a></li>
                     </ul>
                 </div>
             </div>
@@ -39,7 +39,7 @@
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
+                <p>&copy; <%: DateTime.Now.Year %> - Kakuro</p>
             </footer>
         </div>
     </form>
