--- a/Kakuro/Site.Master
+++ b/Kakuro/Site.Master
@@ -26,10 +26,13 @@
                 <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/About">About</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Login">Login</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Register">Register</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Views/About">About</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Views/Contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Views/Gameplay">Gameplay</a></li>
+                    </ul>
+                    <ul class="navbar-nav flex-grow-2">
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Views/Login">Login</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Views/Register">Register</a></li>
                     </ul>
                 </div>
             </div>
