--- a/Kakuro/Site.Master
+++ b/Kakuro/Site.Master
@@ -48,6 +48,7 @@
     </form>
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/Scripts/bootstrap.js") %>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
     </asp:PlaceHolder>
 </body>
